--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -12,7 +12,7 @@
 上述技术都存在一些问题或短板。为了应对 Internet 潮流的到来，微软决定推出新一代的技术框架。
 2002 年的时候，.NET 平台就出现了。刚开始主要使用 VB，后面全面转向了 C#。
 
-发展至今，.NET 平台现在主要分为 3 部分：
+发展至今，.NET 平台现在主要有 3 个版本:
 - .NET Framework
   + 微软把控
   + 只能运行在 Windows 平台上面
@@ -33,8 +33,21 @@
     * 使用 Windows Desktop pack 的方法运行 Winform/WPF 等，从而可以让 Windows 上面支持更多未移植的功能
       
 2020.11，微软决定，将原本要推出的 .NET Core 3.1 改名为 .NET5，并承诺未来只有一个 .NET 平台，每年将会推出一个新的版本。
-  
 
+** 规范
+
+为了保持多个平台之间的一致性，防止出现碎片化和分化，微软推出了 *.NET Standard* (标准/规范):
+- https://github.com/dotnet/standard/blob/v2.1.0/docs/versions/netstandard2.1.md
+- 它提供了一系列的 API 规范。要求所有的平台都要去实现这些 API
+- .NET Framework 支持到了 Standard 2.0，Core 和 Mono 支持到了 2.1。C# 8 的一些特性需要 2.1 标准的支持
+
+为了让不同的编程语言都能在 .NET 平台上和谐有序协作运行，微软定义了一系列的规范，称作 *CLI* (Common Language Infrastructure，即通用语言基础设施):
+- 通过 CLS (Common Language Specification) 阐述了运行在平台上的诸多语言需要遵循的基本规范
+- 通过 CTS (Common Type System) 定义了 .NET 平台上通用的内置类型，包括但不限于对象模型、基本元数组类型的库等
+- 通过 CIL (Common Intermedia Language) 规范了编译成的中间码的格式跟规范
+- 它还包括 CLR/BCL/Metadata 等的定义 (CLR 可以看做 CLI 规范的一个实现）
+  + .NET = SDK (Software Development Kit, 开发工具包) + CLR (Common Language Runtime，通用运行时)
+- 后来 CLI 被提交到了国际化标准组织，形成了一个通用的国际标准
 
 * 单机 到 CS 到 BS
 
