--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -44,9 +44,9 @@
 为了让不同的编程语言都能在 .NET 平台上和谐有序协作运行，微软定义了一系列的规范，称作 *CLI* (Common Language Infrastructure，即通用语言基础设施):
 - 通过 CLS (Common Language Specification) 阐述了运行在平台上的诸多语言需要遵循的基本规范
 - 通过 CTS (Common Type System) 定义了 .NET 平台上通用的内置类型，包括但不限于对象模型、基本元数组类型的库等
-- 通过 CIL (Common Intermedia Language) 规范了编译成的中间码的格式跟规范
+- 通过 *CIL* (Common Intermedia Language) 规范了编译成的中间码的格式跟规范
 - 它还包括 CLR/BCL/Metadata 等的定义 (CLR 可以看做 CLI 规范的一个实现）
-- 注: .NET = SDK (Software Development Kit, 开发工具包) + CLR (Common Language Runtime，通用运行时)
+- 注: .NET = *SDK* (Software Development Kit, 开发工具包) + *CLR* (Common Language Runtime，通用运行时)
 - 后来 CLI 被提交到了国际化标准组织，成为了一个通用的国际标准
 
 * 单机 到 CS 到 BS
