best_try_and_best_chance

--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -1,10 +1,20 @@
 #+TITLE: 任务和作业
 
 
-* [2022-10-26 Wed]
+* [2022-11-08 Tue]
 :PROPERTIES:
 :CUSTOM_ID: active
 :END:
+
+- 整理并理解概念: 
+  * 面向接口编程
+  * 解耦合
+  * 依赖注入 (DI)
+  * 控制反转 (IoC)
+- 掌握 Microsoft.DI 容器在 MVC 中的基本使用
+- 预习 18 章，了解更多 DI 容器的知识
+
+* [2022-10-26 Wed]
 
 - 将课本第一二章，看熟、练熟
 - 能够使用 MVC 独立完成简单的功能
