--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -6,7 +6,7 @@
 :CUSTOM_ID: active
 :END:
 
-[[file:img/oimg_20221108_034512.png]]
+#+HTML: <div style="background: url(img/oimg_20221108_034512.png)">
 
 - 整理并理解概念: 
   * 面向接口编程
@@ -16,6 +16,8 @@
 - 掌握 Microsoft.DI 容器在 MVC 中的基本使用
 - 预习 18 章，了解更多 DI 容器的知识
 - 务必保证每人第 8 章代码落实到位 (请组长做好监管)
+
+#+HTML: </div>
 
 * [2022-10-26 Wed]
 
