--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -1,10 +1,20 @@
 #+TITLE: 任务和作业
 
 
-* [2022-11-08 Tue]
+* [2022-11-11 Fri]
 :PROPERTIES:
 :CUSTOM_ID: active
 :END:
+
+除了完成相关的代码外:
+- 确保整理了 DI 容器的基本知识。最好将 Autofac 的使用也简单整理下
+- 整理并学会 Font Awesome 的使用
+- 整理并学会 Newtonsoft.JSON 的基本使用
+- 整理、总结并比较购物车的不同实现方式: Cookie/Session/Database
+- 整理并学会在 MVC Core 中如何使用 Session
+- 思考购物车的设计
+
+* [2022-11-08 Tue]
 
 - 整理并理解概念: 
   * 面向接口编程
