best_try_and_best_chance

--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -13,6 +13,7 @@
 - 整理、总结并比较购物车的不同实现方式: Cookie/Session/Database
 - 整理并学会在 MVC Core 中如何使用 Session
 - 思考购物车的设计
+- 有余力的继续进行订单管理代码的实现
 
 * [2022-11-08 Tue]
 
