--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -1,10 +1,16 @@
 #+TITLE: 任务和作业
 
 
-* [2022-11-11 Fri]
+* [2022-11-21 Mon]
 :PROPERTIES:
 :CUSTOM_ID: active
 :END:
+
+- 什么是盒子模型、文档流？如何进行页面布局？
+- 总结整理 Flexbox 的使用
+- 什么是 CDN？其原理，其优点缺点？
+
+* [2022-11-11 Fri]
 
 除了完成相关的代码外:
 - 确保整理了 DI 容器的基本知识。最好将 Autofac 的使用也简单整理下
