best_try_and_best_chance

--- a/.src/frontend/0-http.org
+++ b/.src/frontend/0-http.org
@@ -50,6 +50,22 @@ HTTP 是无状态的:
 - 404, Request Url Not Found
 
 * HTTPS
+
+在 HTTP 的基础上，对收发端的数据基于 TLS 或 SSL 协议进行加密、解密，
+从而避免了在网络中数据明文传输导致的系列安全问题。
+
+它本质还是 HTTP 协议，只不过更安全。
+
 * HTTP2
+
+对原来的 HTTP 协议进行的 *改进、升级* 版本，主要是提高性能:
+- 对 1.x 协议语意的完全兼容，是升级不是重写
+- 重点是对终端用户的感知延迟、网络及服务器资源的使用等性能的优化
+  : 二进制分帧/多路复用/头部压缩/...
+
+对于 HTTP2 大家的争议有很多。
+它为了提升性能放弃了原来 HTTP1 的一些简洁性。
+不过，主流的浏览器和服务器都对 HTTP2 进行了支持。
+  
 * Websocket
 * AJAX
