best_try_and_best_chance

--- a/.src/frontend/0-http.org
+++ b/.src/frontend/0-http.org
@@ -65,7 +65,7 @@ HTTP 是无状态的:
 
 对于 HTTP2 大家的争议有很多。
 它为了提升性能放弃了原来 HTTP1 的一些简洁性。
-不过，主流的浏览器和服务器都对 HTTP2 进行了支持。
+不过，它是潮流。主流的浏览器和服务器都对 HTTP2 进行了支持。
   
 * Websocket
 * AJAX
